--- a/index.html
+++ b/index.html
@@ -22,7 +22,31 @@
         </div>
     </div>
 
-
+    <!-- Formulario de Transacción -->
+<div class="formulario">
+    <div class="transa">
+        <div class="circle">+</div>
+        Transacción
+    </div>
+    <form>
+        <div class="form-group">
+            <select class="form-control">
+                <option value="" disabled selected>Ingreso | Egreso</option>
+                <option value="Ingreso">Ingreso</option>
+                <option value="Egreso">Egreso</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control"  placeholder="Descripción">
+        </div>
+        <div class="form-group">
+            <input type="number" class="form-control" placeholder="Monto">
+        </div>
+        <div class="form-group" style="text-align: center;">
+            <button type="submit" class="btn-primary">Agregar</button>
+        </div>
+    </form>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
