--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
     </form>
 </div>
 
+    <!-- Resultados de cálculos -->
+    <div class="results">
+        <p>+ <span id="totalBudget">0.00</span></p>
+        <p>Ingresos: <span id="totalIncomes">0.00</span></p>
+        <p>Egresos: <span id="totalExpenses">0.00</span></p>
+        <p>Porcentaje de Gastos: <span id="expensePercentage">0.00%</span></p>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
