--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@700&family=Sigmar&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@700&family=Sigmar&display=swap"
+        rel="stylesheet">
+
     <title>Aplicación de Presupuesto</title>
 </head>
+
 <body>
-    
+
     <div class="card text-bg-dark">
-        <img src="imgs/fondo.jpg" class="card-img img-fondo" >
+        <img src="imgs/fondo.jpg" class="card-img img-fondo">
         <div class="card-img-overlay">
             <div class="app">
                 <div class="title" id="title"></div>
@@ -23,40 +27,58 @@
     </div>
 
     <!-- Formulario de Transacción -->
-<div class="formulario">
-    <div class="transa">
-        <div class="circle">+</div>
-        Transacción
-    </div>
-    <form>
-        <div class="form-group">
-            <select class="form-control">
-                <option value="" disabled selected>Ingreso | Egreso</option>
-                <option value="Ingreso">Ingreso</option>
-                <option value="Egreso">Egreso</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control"  placeholder="Descripción">
-        </div>
-        <div class="form-group">
-            <input type="number" class="form-control" placeholder="Monto">
-        </div>
-        <div class="form-group" style="text-align: center;">
-            <button type="submit" class="btn-primary">Agregar</button>
-        </div>
-    </form>
-</div>
 
-    <!-- Resultados de cálculos -->
-    <div class="results">
-        <p>+ <span id="totalBudget">0.00</span></p>
-        <p>Ingresos: <span id="totalIncomes">0.00</span></p>
-        <p>Egresos: <span id="totalExpenses">0.00</span></p>
-        <p>Porcentaje de Gastos: <span id="expensePercentage">0.00%</span></p>
+    <div class="contenedor_padre">
+        <div class="formulario">
+            <div class="transa">
+                <div class="circle">+</div>
+                Transacción
+            </div>
+            <form>
+                <div class="form-group">
+                    <select class="form-control">
+                        <option value="" disabled selected>Ingreso | Egreso</option>
+                        <option value="Ingreso">Ingreso</option>
+                        <option value="Egreso">Egreso</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Descripción">
+                </div>
+                <div class="form-group">
+                    <input type="number" class="form-control" placeholder="Monto">
+                </div>
+                <div class="form-group" style="text-align: center;">
+                    <button type="submit" class="btn-primary">Agregar</button>
+                </div>
+            </form>
+
+        </div>
+
+
+
+
+        <div class="egreso_ingreso">
+            <h2>Egresos e Ingresos</h2>
+            <div class="menu_botones">
+                <button class"bt_op" id="egreso">Egresos</button>
+                <button class"bt_op" id="ingreso">Ingresos</span></button>
+            </div>
+            <div class="operaciones" id="boxEgresos">
+
+            </div>
+            <div class="operaciones" id="boxIngresos">
+
+            </div>
+        </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
+    <script src="js/egreso_e_ingresos.js"></script>
 </body>
+
 </html>
