Sección de registro

--- a/index.html
+++ b/index.html
@@ -53,24 +53,12 @@
                 </div>
             </form>
 
+       
+        <div class="menu_botones">
+            <button class="bt_op" id="btnIngreso">Ingresos</button>
+            <button class="bt_op" id="btnEgreso">Egresos</button>
         </div>
-
-
-
-
-        <div class="egreso_ingreso">
-            <h2>Egresos e Ingresos</h2>
-            <div class="menu_botones">
-                <button class"bt_op" id="egreso">Egresos</button>
-                <button class"bt_op" id="ingreso">Ingresos</span></button>
-            </div>
-            <div class="operaciones" id="boxEgresos">
-
-            </div>
-            <div class="operaciones" id="boxIngresos">
-
-            </div>
-        </div>
+        <ul id="transactionList"></ul>    
     </div>
 
 
