Cambio de background titulo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="card text-bg-dark">
-        <img src="imgs/fondo.jpg" class="card-img img-fondo">
+        <img class="card-img img-fondo">
         <div class="card-img-overlay">
             <div class="app">
                 <div class="title" id="title"></div>
