--- a/index.html
+++ b/index.html
@@ -43,22 +43,28 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Descripción">
+                    <input type="text" class="form-control" placeholder="Descripción" required>
                 </div>
                 <div class="form-group">
-                    <input type="number" class="form-control" placeholder="Monto">
+                    <input type="number" class="form-control" placeholder="Monto" required>
                 </div>
                 <div class="form-group" style="text-align: center;">
                     <button type="submit" class="btn-primary">Agregar</button>
                 </div>
             </form>
 
-       
-        <div class="menu_botones">
-            <button class="bt_op" id="btnIngreso">Ingresos</button>
-            <button class="bt_op" id="btnEgreso">Egresos</button>
         </div>
-        <ul id="transactionList"></ul>    
+
+        <div class="boxTransacciones">
+
+            <div class="menu_botones">
+                <button class="bt_op" id="btnIngreso">Ingresos ($<span id="saldo">0</span>)</button>
+                <button class="bt_op" id="btnEgreso">Egresos</button>
+            </div>
+            <br>
+            <div id="boxIngresos"></div>
+            <div id="boxEgresos"></div>
+        </div>
     </div>
 
 
