--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         <div class="card-img-overlay">
             <div class="app">
                 <div class="title" id="title"></div>
+                <div class="total-mes text-dark text-center">Monto Total del Mes: $<span id="totalMes">0.00</span></div>
+
+            </div>
+            <div class="d-flex flex-column align-items-center mb-4">
+                <button type="button" class="btn boton_ingreso btn-dark mb-3 btn-lg">INGRESOS: <span id="ingresoss">0.00</span></button>
+
+                <button type="button" class="btn btn_egreso btn-light btn-lg btn-outline-secondary">EGRESOS: <span id="egresoss">0.00</button>
+            </div>
+            <div class="porcentaje text-dark text-center">
+                <h5>Porcentaje de gastos: <button type="button" class="btn btn-dark btn-sm">0.00%</button>
+                </h5>
             </div>
         </div>
     </div>
