correcciones por segunda vez

--- a/index.html
+++ b/index.html
@@ -62,14 +62,18 @@
                 <div class="form-group" style="text-align: center;">
                     <button type="submit" class="btn-primary">Agregar</button>
                 </div>
-            </form>
+            </form>    
+    </div>
 
-       
+    <div class="boxTransacciones">
         <div class="menu_botones">
-            <button class="bt_op" id="btnIngreso">Ingresos</button>
-            <button class="bt_op" id="btnEgreso">Egresos</button>
-        </div>
-        <ul id="transactionList"></ul>    
+        <button class="bt_op" id="btnIngreso">Ingresos</button>
+        <button class="bt_op" id="btnEgreso">Egresos</button>
+    </div>
+    <br>
+    <div id="transactionList" class="transactionList"></div>
+    </div>
+    
     </div>
 
 
